# patchcord

./: .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.md  __init__.py  config.ci.py  config.example.py  discord_endpoints.txt  ecosystem.config.js  manage.py  mypy.ini  nginx.conf  pyproject.toml  requirements.txt  run.py  schema.sql  setup.py  tox.ini
.github/workflows/: ci.yml
assets/: builds.json  discovery_categories.json  experiments.json  guild_experiments.json
docs/: README.md  admin_api.md  clients.md  differences.md  extra_fields.md  lvsp.md  operating.md  pubsub.md  structure.md
docs/lvsp/: 00-connection.md
litecord/: __init__.py  admin_schemas.py  auth.py  cache.py  dispatcher.py  enums.py  errors.py  guild_memory_store.py  images.py  jobs.py  json.py  models.py  permissions.py  presence.py  schemas.py  snowflake.py  storage.py  system_messages.py  types.py  typing_hax.py  user_storage.py  utils.py
litecord/blueprints/: __init__.py  applications.py  attachments.py  auth.py  channels.py  checks.py  dm_channels.py  dms.py  gateway.py  guilds.py  icons.py  invites.py  misc.py  nodeinfo.py  science.py  (+8 more)
manage/: main.py
static/: builds.json  index.html  invite_register.html
templates/: 2016.html  2018.html  2020.html  build_override.html  new.html  old.html
tests/: common.py  conftest.py  credentials.py  test_channels.py  test_embeds.py  test_gateway.py  test_guild.py  test_invites.py  test_main.py  test_messages.py  test_no_tracking.py  test_ratelimits.py  test_reactions.py  test_user.py  test_webhooks.py  test_websocket.py
utils/: useradd.py
(+128 files in other folders)
