[tool.poetry]
name = "litecord"
version = "0.1.0"
description = "Clean-Room implementation of the Discord Backend"
authors = ["Luna <git@l4.pm>"]
license = "GPLv3-only"

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^3.2.0"
itsdangerous = "^1.1.0"
asyncpg = "^0.24.0"
websockets = "^10.0"
Earl-ETF = "^2.1.2"
logbook = "^1.5.3"
Cerberus = "^1.3.4"
quart = "^0.15.1"
pillow = "^8.3.2"
aiohttp = "^3.7.4"
zstandard = "^0.15.2"
winter = {git = "https://gitlab.com/elixire/winter"}



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
