[tool.poetry]
name = "litecord"
version = "0.1.0"
description = "Clean-Room implementation of the Discord Backend"
authors = ["Luna <git@l4.pm>"]
license = "GPLv3-only"

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^3.2.2"
itsdangerous = "^2.1.2"
asyncpg = "^0.26.0"
websockets = "^10.3"
Earl-ETF = "^2.1.2"
logbook = "^1.5.3"
Cerberus = "^1.3.4"
quart = "^0.18.0"
pillow = "^9.2.0"
aiohttp = "^3.8.1"
zstandard = "^0.18.0"
winter = {git = "https://gitlab.com/elixire/winter"}
wsproto = "^1.1.0"
aiofile = "^3.8.1"
emoji = "<3.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
